src/styles/header.scss
.header {
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 2;
  padding: $header-padd-y 30px;
  transition: background-color, box-shadow;
  transition-duration: $trans-dur;

  .is-scrolled & {
    background: #fff;
    box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.07);

    .locations {
      border-color: $grey-8;
    }
  }

  @include media(to_laptop) {
    box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.07);
  }

  &__content {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__logo-part {
    display: flex;
    align-items: center;
    gap: 22px;
  }

  &__menu-part {
    display: flex;
    align-items: center;
    gap: 32px;
  }
}

.locations {
  list-style: none;
  font-size: 14px;
  line-height: $locations-line-height;
  font-weight: 600;
  display: flex;
  gap: 4px;
  padding: ($locations-height - $location-height) * 0.5;
  border: 1px solid transparent;
  border-radius: $locations-height;
  background: #fff;
  background-clip: padding-box;

  @include media(to_laptop) {
    border-color: $grey-8;
  }

  &__link {
    display: block;
    padding: ($location-height - $locations-line-height) * 0.5 12px;
    color: $grey-1;
    text-decoration: none;
    border-radius: 32px;
    transition-property: color, background-color;
    transition-duration: $trans-dur;

    &:hover {
      color: $primary;
      background: $secondary;
    }

    &.locations__link--active {
      color: #fff;
      background: $primary;
    }
  }
}

.sub-nav {
  list-style: none;
  display: flex;
  gap: 32px;

  &__link {
    color: inherit;
    text-decoration: none;
    transition: color $trans-dur;

    &:hover {
      color: $primary;
    }
  }
}

.phone {
  font-weight: 600;
  color: inherit; // for mobile verision

  &__number {
    text-decoration: none;
    color: inherit;
    position: relative;
    padding-right: 15px;
    margin-right: 16.5px; // padding-right + ::after width

    &::after {
      content: "";
      width: 1.5px;
      height: 12px;
      background: currentColor;
      position: absolute;
      left: 100%;
      top: 50%;
      margin-top: -6px;
    }
  }
}

.menu-btn {
  border: none;
  background: none;
  position: relative;
  z-index: 1;
  width: $menu-btn-size;
  height: $menu-btn-size;
  cursor: pointer;

  &::before,
  &::after {
    content: "";
    display: block;
    height: $menu-btn-line-height;
    width: 20px;
    background: $black;
    position: absolute;
    left: 50%;
    margin-left: -10px;
    transition: background-color $trans-dur, transform $trans-dur, top $trans-dur $trans-dur;
  }

  &::before {
    top: ($menu-btn-size - $menu-btn-between-line-space - $menu-btn-line-height * 2) * 0.5;
  }

  &::after {
    top: ($menu-btn-size - $menu-btn-between-line-space - $menu-btn-line-height * 2) * 0.5 + $menu-btn-line-height + $menu-btn-between-line-space;
  }
}

.menu {
  &.active {
    .menu-sidebar {
      transform: translateX(0);
    }

    .menu-btn {
      &::before,
      &::after {
        background: #fff;
        top: 50%;
        transition: background-color $trans-dur, transform $trans-dur $trans-dur, top $trans-dur;
      }

      &::before {
        transform: translateY(-50%) rotate(45deg);
      }

      &::after {
        transform: translateY(-50%) rotate(-45deg);
      }
    }
  }

  &-sidebar {
    padding: 35px 60px;
    color: #fff;
    background: $primary;

    @include media(mobile) {
      width: 100%;
    }
  }

  &-list {
    list-style: none;
  }

  &-item {
    margin-bottom: 22px;
    overflow: hidden;

    &:last-child {
      margin-bottom: 0;
    }
  }

  &-link {
    font-size: 44px;
    line-height: 52px;
    font-weight: 400;
    border: none;
    background: none;
    display: block;
    text-decoration: none;
    color: inherit;
    opacity: 0.7;
    transform: translateX(-54px); // Magic number =/ Arrow width in Inspector
    transition: opacity, transform;
    transition-duration: $trans-dur;

    &::before {
      content: "→";
      margin-right: 10px;
    }

    &:hover,
    &.active {
      opacity: 1;
      transform: translateX(0) skew(-10deg);
    }
  }
}

.header__menu {
  &-sidebar {
    position: fixed;
    top: 0;
    right: 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 35px 60px;
    color: #fff;
    background: $primary;
    transform: translateX(100%);
    transition: transform $trans-dur;
  }

  &-list {
    margin-bottom: 40px;
  }
}

